crab/src/tier/provider/snapshots/crab__tier__provider__s3__tests__s3_full_plan_versioning_multiple_rules.snap
---
source: crab/src/tier/provider/s3.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<LifecycleConfiguration xmlns="http://s3.amazonaws.com/doc/2006-03-01/">
  <Rule>
    <ID>crab-xorbs-to-glacier</ID>
    <Filter>
      <And>
        <Prefix>.crab/xorbs/</Prefix>
        <ObjectSizeGreaterThan>40960</ObjectSizeGreaterThan>
      </And>
    </Filter>
    <Status>Enabled</Status>
    <Transition>
      <Days>180</Days>
      <StorageClass>GLACIER</StorageClass>
    </Transition>
    <NoncurrentVersionTransition>
      <NoncurrentDays>180</NoncurrentDays>
      <StorageClass>GLACIER</StorageClass>
    </NoncurrentVersionTransition>
    <NoncurrentVersionExpiration>
      <NoncurrentDays>180</NoncurrentDays>
    </NoncurrentVersionExpiration>
  </Rule>
  <Rule>
    <ID>crab-xorbs-to-ia</ID>
    <Filter>
      <Prefix>.crab/xorbs/</Prefix>
    </Filter>
    <Status>Enabled</Status>
    <Transition>
      <Days>30</Days>
      <StorageClass>STANDARD_IA</StorageClass>
    </Transition>
    <NoncurrentVersionTransition>
      <NoncurrentDays>30</NoncurrentDays>
      <StorageClass>STANDARD_IA</StorageClass>
    </NoncurrentVersionTransition>
    <NoncurrentVersionExpiration>
      <NoncurrentDays>60</NoncurrentDays>
    </NoncurrentVersionExpiration>
  </Rule>
</LifecycleConfiguration>
