crab/src/tier/provider/snapshots/crab__tier__provider__s3__tests__s3_multiple_transitions.snap
---
source: crab/src/tier/provider/s3.rs
expression: xml
---
<?xml version="1.0" encoding="UTF-8"?>
<LifecycleConfiguration xmlns="http://s3.amazonaws.com/doc/2006-03-01/">
  <Rule>
    <ID>crab-xorbs-tiering</ID>
    <Filter>
      <And>
        <Prefix>.crab/xorbs/</Prefix>
        <ObjectSizeGreaterThan>40960</ObjectSizeGreaterThan>
      </And>
    </Filter>
    <Status>Enabled</Status>
    <Transition>
      <Days>30</Days>
      <StorageClass>STANDARD_IA</StorageClass>
    </Transition>
    <Transition>
      <Days>180</Days>
      <StorageClass>GLACIER</StorageClass>
    </Transition>
  </Rule>
</LifecycleConfiguration>
